--- a/blog/vnc-viewer-listen-through-network.org
+++ b/blog/vnc-viewer-listen-through-network.org
@@ -2,7 +2,7 @@
 #+AUTHOR:      
 #+EMAIL:       jain.y@JAIN-PC
 #+DATE:        2016-07-06 周三
-#+URI:         /blog/%y/%m/%d/使用 vnc 穿透内网远程控制
+#+URI:         /blog/%y/%m/%d/vnc-viewer-listen-through-network
 #+KEYWORDS:    vnc,listen,内网穿透
 #+TAGS:        vnc,远程,内网
 #+LANGUAGE:    en
@@ -18,13 +18,38 @@
     大多数情况下用户只需要其中的两个命令：vncserver 和 vncviewer。
 
   * 关于 vnc 的服务端配置请自行搜索。
+    * Windows 版:
+      - [[http://www.tightvnc.com/download.php][Download TightVNC]]
+      - [[https://www.realvnc.com/download/vnc/windows/][RealVNC | Download VNC for Windows]]
+    
 
 * 穿越内网远程控制
   * 服务端（vnc server）在内网，客户端（vnc viewer）需要有公网 IP。
     原理是由服务端反向朝着客户端（需要监听端口）发送连接请求。
 
-  * vnc viewer 端口监听
+  * vnc viewer 监听
+    * 下载:  [[https://www.realvnc.com/download/viewer/][RealVNC | Download VNC Viewer]]
+    * windows 版启动监听
+      
+      在快捷方式中加入 =-listen= 参数，启动后会最小化到任务栏图标。
+
+    * linux 启动监听
+      #+BEGIN_EXAMPLE
+      vncviewer -listen
+      #+END_EXAMPLE
+
+  * vnc server 端请求
     #+BEGIN_EXAMPLE
-    vncviewer -listen
+    vncconfig -display :1 -connect 监听端公网-IP:端口（默认 5500 端口)
     #+END_EXAMPLE
+
+* 遇到的问题
+  * 如果客户端也在内网的话，也是无法直接连接的（不能内网 to 内网，只能内网 to 公网）。必须把内网映射到外网。有以下两种方法：
+    * 设置 DMZ 主机：主机地址设置为客户端机器 IP
+    * 端口映射：把外网端口映射到客户端机器的 5500 端口，比如：公网 8800 -> 客户机 5500，服务器端连接方式如下：
+      #+BEGIN_EXAMPLE
+      vncconfig -display :1 -connect 公网-IP:8800
+      #+END_EXAMPLE
+    
+      
     
